// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateComponentDescriptorH can generate a single boolean prop 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/SINGLE_COMPONENT_WITH_BOOLEAN_PROP/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using BooleanPropNativeComponentComponentDescriptor = ConcreteComponentDescriptor<BooleanPropNativeComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateComponentDescriptorH can generate a single native primitive prop 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/SINGLE_COMPONENT_WITH_COLOR_PROP/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using ColorPropNativeComponentComponentDescriptor = ConcreteComponentDescriptor<ColorPropNativeComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateComponentDescriptorH can generate a single string prop 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/SINGLE_COMPONENT_WITH_STRING_PROPS/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using StringPropComponentComponentDescriptor = ConcreteComponentDescriptor<StringPropComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateComponentDescriptorH can generate enum props 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/SINGLE_COMPONENT_WITH_ENUM_PROP/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using EnumPropsNativeComponentComponentDescriptor = ConcreteComponentDescriptor<EnumPropsNativeComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateComponentDescriptorH can generate events 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/SINGLE_COMPONENT_WITH_EVENT_PROPS/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using EventsNativeComponentComponentDescriptor = ConcreteComponentDescriptor<EventsNativeComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateComponentDescriptorH can generate float props 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/SINGLE_COMPONENT_WITH_FLOAT_PROPS/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using FloatPropNativeComponentComponentDescriptor = ConcreteComponentDescriptor<FloatPropNativeComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateComponentDescriptorH can generate integer props 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/SINGLE_COMPONENT_WITH_INTEGER_PROPS/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using IntegerPropNativeComponentComponentDescriptor = ConcreteComponentDescriptor<IntegerPropNativeComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateComponentDescriptorH supports two components from different modules 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/TWO_COMPONENTS_DIFFERENT_FILES/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using MultiFile1NativeComponentComponentDescriptor = ConcreteComponentDescriptor<MultiFile1NativeComponentShadowNode>;
using MultiFile2NativeComponentComponentDescriptor = ConcreteComponentDescriptor<MultiFile2NativeComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateComponentDescriptorH supports two components from same module 1`] = `
Map {
  "ComponentDescriptors.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#pragma once

#include <react/components/TWO_COMPONENTS_SAME_FILE/ShadowNodes.h>
#include <react/core/ConcreteComponentDescriptor.h>

namespace facebook {
namespace react {

using MultiComponent1NativeComponentComponentDescriptor = ConcreteComponentDescriptor<MultiComponent1NativeComponentShadowNode>;
using MultiComponent2NativeComponentComponentDescriptor = ConcreteComponentDescriptor<MultiComponent2NativeComponentShadowNode>;

} // namespace react
} // namespace facebook
",
}
`;
